--- a/package.json
+++ b/package.json
@@ -33,12 +33,15 @@
     "browserify": "^17.0.0",
     "dotenv": "^16.0.0",
     "eslint": "^7.32.0",
+    "glob-parent": "^6.0.2",
     "jest": "^27.5.1",
     "jest-fetch-mock": "^3.0.3",
     "jsdom": "^16.6.0",
     "npm-run-all": "^4.1.5",
     "runtime-typescript-checker": "^1.0.1",
+    "serialize-javascript": "^3.1.0",
     "standardized-audio-context-mock": "^9.2.0",
+    "superagent": "^3.7.0",
     "ts-jest": "^27.1.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.1.0",
@@ -66,7 +69,8 @@
     "build": "npm run build:ts && npm run build:minify && webpack --config webpack.config.js --mode production",
     "publish-next": "npm install && npm run build && npm publish --access public --tag next",
     "publish-beta": "npm install && npm run build && npm publish --access public --tag beta",
-    "publish-prod": "npm install && npm run build && npm publish --access public"
+    "publish-prod": "npm install && npm run build && npm publish --access public",
+    "preinstall": "npx npm-force-resolutions"
   },
   "author": "",
   "license": "Apache 2.0",
@@ -75,5 +79,10 @@
     "loglevel": "^1.8.0",
     "symbl-opus-encdec": "^0.1.2",
     "uuid": "^8.3.2"
+  },
+  "resolutions": {
+    "serialize-javascript": "^3.1.0",
+    "superagent": "^3.7.0",
+    "glob-parent": "^6.0.2"
   }
 }
